--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 before_install:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t amtlib/wine-fedora .
+  - docker build --squash -t amtlib/wine-fedora .
 
 script:
   - docker run --rm amtlib/wine-fedora wine --version
