--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 before_install:
   - >-
       echo '{"experimental": true}' | sudo tee /etc/docker/daemon.json
-  - service docker restart
+  - sudo service docker restart
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build --squash -t amtlib/wine-fedora .
 
