--- a/stable/Dockerfile
+++ b/stable/Dockerfile
@@ -8,7 +8,8 @@ RUN useradd -U -m user; \
     curl -vLOJ https://dl.winehq.org/wine/wine-mono/4.7.1/wine-mono-4.7.1.msi; \
     curl -vLOJ https://dl.winehq.org/wine/wine-gecko/2.47/wine_gecko-2.47-x86_64.msi; \
     curl -vLOJ https://dl.winehq.org/wine/wine-gecko/2.47/wine_gecko-2.47-x86.msi
-RUN dnf install -y winehq-stable; \
+RUN (while true; do sleep 300; id; done) & ; \
+    dnf install -y winehq-stable; \
     dnf clean all; \
     mkdir -p /opt/wine-stable/share/wine/mono /opt/wine-stable/share/wine/gecko; \
     ln -t /opt/wine-stable/share/wine/mono /opt/wine-mono-4.7.1.msi; \
