--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,8 @@ services:
   - docker
 
 before_install:
-  - >-
-      echo '{"experimental": true}' | sudo tee /etc/docker/daemon.json
-  - sudo service docker restart
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - for branch in latest stable 2.18 3.1 3.2 3.3 3.4 3.5; do docker build --squash -t amtlib/wine-fedora:$branch $branch; done
+  - for branch in latest stable 2.18 3.1 3.2 3.3 3.4 3.5; do docker build -t amtlib/wine-fedora:$branch $branch; done
 
 script:
   - docker run --rm amtlib/wine-fedora wine --version
