--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - for branch in latest stable 2.18 3.1 3.2 3.3 3.4 3.5; do docker build -t amtlib/wine-fedora:$branch $branch; done
 
 script:
-  - docker run --rm amtlib/wine-fedora wine --version
+  - for branch in latest stable 2.18 3.1 3.2 3.3 3.4 3.5; do docker run --rm amtlib/wine-fedora:$branch wine --version; done
   
 deploy:
   provider: script
