--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ services:
 before_install:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - for branch in latest stable 2.18 3.1 3.2 3.3 3.4 3.5; do docker build -t amtlib/wine-fedora:$branch $branch; done
+  - docker build -t amtlib/wine-fedora:latest test
 
 script:
   - for branch in latest stable 2.18 3.1 3.2 3.3 3.4 3.5; do docker run --rm amtlib/wine-fedora:$branch wine --version; done
-  
+
 deploy:
   provider: script
   script: bash docker_push
