--- a/3.4/Dockerfile
+++ b/3.4/Dockerfile
@@ -12,8 +12,8 @@ RUN (while true; do sleep 300; id; done) & \
     dnf install -y winehq-devel-3.4; \
     dnf clean all; \
     mkdir -p /opt/wine-devel/share/wine/mono /opt/wine-devel/share/wine/gecko; \
-    ln -t /opt/wine-devel/share/wine/mono /opt/wine-mono-4.7.1.msi; \
-    ln -t /opt/wine-devel/share/wine/gecko /opt/wine_gecko-2.47-x86_64.msi; \
-    ln -t /opt/wine-devel/share/wine/gecko /opt/wine_gecko-2.47-x86.msi
+    ln -st /opt/wine-devel/share/wine/mono /opt/wine-mono-4.7.1.msi; \
+    ln -st /opt/wine-devel/share/wine/gecko /opt/wine_gecko-2.47-x86_64.msi; \
+    ln -st /opt/wine-devel/share/wine/gecko /opt/wine_gecko-2.47-x86.msi
 USER user
 WORKDIR /home/user
