--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ services:
 
 before_install:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - for branch in 2.13 2.14 2.15 2.16 2.17 2.18 2.19 2.20 2.21 2.22 3.1 3.2 3.3 3.4 3.5; do cat Dockerfile.ac | sed "s/@VERSION@/$branch/" | docker build -t amtlib/wine-fedora:$branch -; done
-  - cat Dockerfile.ac | sed "s/winehq-devel-@VERSION@/winehq-devel/" | docker build -t amtlib/wine-fedora:latest -
-  - cat Dockerfile.ac | sed "s/winehq-devel-@VERSION@/winehq-stable/" | sed "s/wine-devel/wine-stable/" | docker build -t amtlib/wine-fedora:stable -
+  - for branch in 2.13 2.14 2.15 2.16 2.17 2.18 2.19 2.20 2.21 2.22 3.1 3.2 3.3 3.4 3.5; do cat Dockerfile.ac | sed "s/@VERSION@/$branch/g" | docker build -t amtlib/wine-fedora:$branch -; done
+  - cat Dockerfile.ac | sed "s/winehq-devel-@VERSION@/winehq-devel/g" | docker build -t amtlib/wine-fedora:latest -
+  - cat Dockerfile.ac | sed "s/winehq-devel-@VERSION@/winehq-stable/g" | sed "s/wine-devel/wine-stable/g" | docker build -t amtlib/wine-fedora:stable -
 
 script:
   - for branch in latest stable 2.13 2.14 2.15 2.16 2.17 2.18 2.19 2.20 2.21 2.22 3.1 3.2 3.3 3.4 3.5; do docker run --rm amtlib/wine-fedora:$branch wine --version; done
