--- a/Dockerfile.ac
+++ b/Dockerfile.ac
@@ -1,7 +1,7 @@
 FROM fedora:26
 RUN useradd -U -m user; \
     curl -o /etc/yum.repos.d/winehq.repo https://dl.winehq.org/wine-builds/fedora/26/winehq.repo; \
-    dnf install -y winehq-stable $(dnf repoquery --requires winetricks | grep -v ^wine) mesa-dri-drivers.x86_64 mesa-dri-drivers.i686 /usr/bin/ntlm_auth glibc-langpack-en langpacks-en glibc-langpack-zh langpacks-zh_CN langpacks-zh_TW; \
+    dnf install -y winehq-stable $(dnf repoquery -q --requires winetricks | grep -v ^wine) mesa-dri-drivers.x86_64 mesa-dri-drivers.i686 /usr/bin/ntlm_auth glibc-langpack-en langpacks-en glibc-langpack-zh langpacks-zh_CN langpacks-zh_TW; \
     dnf remove -y --noautoremove $(rpm -qa wine*); \
     dnf clean all; \
     curl -vLo /usr/local/bin/winetricks https://raw.githubusercontent.com/Winetricks/winetricks/master/src/winetricks; \
